syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.nadiya.grpc";
package product;

service ProductGrpc {
  rpc GetProduct (ProductRequest) returns (ProductResponse) {}
}

message ProductRequest {
  int64 id = 1;
}

message ProductResponse {
  int64 id = 1;
  string name = 2;
  double price = 3;
}